src/routes/layout.css
@import 'tailwindcss';
@plugin '@tailwindcss/forms';
@plugin '@tailwindcss/typography';
.layoutItem h1,
.layoutItem h2,
.layoutItem h3 {
	margin: 0;
}

.layoutContainer {
	display: grid;
	grid-template-columns: 250px 1fr 350px;
	grid-template-rows: 10vh 1fr 10vh;
	/* justify-content: center; */
	grid-template-areas:
		'header header header'
		'left-sidebar main right-sidebar'
		'footer footer footer';
	gap: 1em;
}

.layoutItem {
	padding: 2em;
	background-color: blue;
	color: aliceblue;
	text-align: center;

	border-radius: 8px;
	font-size: 1.5rem;
}

.gridContainer {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
	/* grid-template-rows: auto; */
	grid-auto-rows: 300px;
	justify-content: center;
	gap: 1em;
	height: 100%;
	overflow: auto;
}

.gridItem {
	display: flex;
	flex-direction: column;
	text-align: center;
	background-color: white;
	border-radius: 1em;
}

